--- a/styles/styles.css
+++ b/styles/styles.css
@@ -271,6 +271,7 @@ ul {
         color: #3d3d3d;
         font-size: 1.5rem;
         line-height: 4vh;
+        margin-bottom: 2vh;
     }
 }
 @media (max-width: 900px) {
@@ -281,6 +282,7 @@ ul {
         font-weight: 600;
         color: #3d3d3d;
         font-size: 1.2rem;
+        margin-bottom: 4vh;
     }
 }
 
